--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "chromadb": "^1.8.1",
     "duck-duck-scrape": "^2.2.5",
     "langchain": "^0.2.9",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "wikipedia": "^2.1.2"
